crates/fortitude_linter/src/rules/style/snapshots/fortitude_linter__rules__style__tests__keywords-missing-space_S231.f90_include_inout_goto.snap
---
source: crates/fortitude_linter/src/rules/style/mod.rs
expression: diagnostics
snapshot_kind: text
---
S231 [*] Missing space in 'endfunction'
 --> ./resources/test/fixtures/style/S231.f90:4:1
  |
2 |   integer, intent(in) :: x
3 |   y = x
4 | endfunction f
  | ^^^^^^^^^^^
5 |
6 | module m
  |
help: Replace with 'end function'
1 | integer function f(x) result(y)
2 |   integer, intent(in) :: x
3 |   y = x
  - endfunction f
4 + end function f
5 |
6 | module m
7 |   implicit none

S231 [*] Missing space in 'endtype'
  --> ./resources/test/fixtures/style/S231.f90:31:3
   |
29 |   type, extends(point_2d) :: point_3d
30 |     real :: z
31 |   endtype point_3d
   |   ^^^^^^^
32 |
33 |   enum, bind(c)
   |
help: Replace with 'end type'
28 |
29 |   type, extends(point_2d) :: point_3d
30 |     real :: z
   -   endtype point_3d
31 +   end type point_3d
32 |
33 |   enum, bind(c)
34 |     enumerator :: a = 1

S231 [*] Missing space in 'endenum'
  --> ./resources/test/fixtures/style/S231.f90:39:3
   |
37 |   enum, bind(c)
38 |     enumerator :: b = 2
39 |   EndEnum
   |   ^^^^^^^
40 |
41 | contains
   |
help: Replace with 'end enum'
36 |
37 |   enum, bind(c)
38 |     enumerator :: b = 2
   -   EndEnum
39 +   End Enum
40 |
41 | contains
42 |   integer function f1(x, y)

S231 [*] Missing space in 'inout'
  --> ./resources/test/fixtures/style/S231.f90:43:21
   |
41 | contains
42 |   integer function f1(x, y)
43 |     integer, intent(inoUt) :: x
   |                     ^^^^^
44 |     integer, intent(in out) :: y
45 |     select case (x)
   |
help: Replace with 'in out'
40 |
41 | contains
42 |   integer function f1(x, y)
   -     integer, intent(inoUt) :: x
43 +     integer, intent(in oUt) :: x
44 |     integer, intent(in out) :: y
45 |     select case (x)
46 |       case(1)

S231 [*] Missing space in 'selectcase'
  --> ./resources/test/fixtures/style/S231.f90:51:5
   |
49 |         print *, y
50 |     end select
51 |     selectcase (y)
   |     ^^^^^^^^^^
52 |       case(1)
53 |         f1 = y
   |
help: Replace with 'select case'
48 |       case default
49 |         print *, y
50 |     end select
   -     selectcase (y)
51 +     select case (y)
52 |       case(1)
53 |         f1 = y
54 |       case default

S231 [*] Missing space in 'endselect'
  --> ./resources/test/fixtures/style/S231.f90:56:5
   |
54 |       case default
55 |         f1 = x
56 |     endselect
   |     ^^^^^^^^^
57 |   end function f1
   |
help: Replace with 'end select'
53 |         f1 = y
54 |       case default
55 |         f1 = x
   -     endselect
56 +     end select
57 |   end function f1
58 |
59 |   integer function f2(x)

S231 [*] Missing space in 'endblock'
  --> ./resources/test/fixtures/style/S231.f90:67:5
   |
65 |     block_name: block
66 |       integer :: k
67 |     endblock block_name
   |     ^^^^^^^^
68 |     print *, "x"
69 |     f2 = x
   |
help: Replace with 'end block'
64 |     end block
65 |     block_name: block
66 |       integer :: k
   -     endblock block_name
67 +     end block block_name
68 |     print *, "x"
69 |     f2 = x
70 |   endfunction f2

S231 [*] Missing space in 'endfunction'
  --> ./resources/test/fixtures/style/S231.f90:70:3
   |
68 |     print *, "x"
69 |     f2 = x
70 |   endfunction f2
   |   ^^^^^^^^^^^
71 |
72 |   subroutine s1()
   |
help: Replace with 'end function'
67 |     endblock block_name
68 |     print *, "x"
69 |     f2 = x
   -   endfunction f2
70 +   end function f2
71 |
72 |   subroutine s1()
73 |     integer, parameter :: N = 3

S231 [*] Missing space in 'endforall'
  --> ./resources/test/fixtures/style/S231.f90:84:7
   |
82 |       forall(i = 1:N, j = 1:N, i /= j)
83 |         A(i, j) = 0.0
84 |       endforall
   |       ^^^^^^^^^
85 |     endassociate named_associate
86 |     print *, A
   |
help: Replace with 'end forall'
81 |     named_associate: associate(A => matrix)
82 |       forall(i = 1:N, j = 1:N, i /= j)
83 |         A(i, j) = 0.0
   -       endforall
84 +       end forall
85 |     endassociate named_associate
86 |     print *, A
87 |   end subroutine s1

S231 [*] Missing space in 'endassociate'
  --> ./resources/test/fixtures/style/S231.f90:85:5
   |
83 |         A(i, j) = 0.0
84 |       endforall
85 |     endassociate named_associate
   |     ^^^^^^^^^^^^
86 |     print *, A
87 |   end subroutine s1
   |
help: Replace with 'end associate'
82 |       forall(i = 1:N, j = 1:N, i /= j)
83 |         A(i, j) = 0.0
84 |       endforall
   -     endassociate named_associate
85 +     end associate named_associate
86 |     print *, A
87 |   end subroutine s1
88 |

S231 [*] Missing space in 'selecttype'
   --> ./resources/test/fixtures/style/S231.f90:98:5
    |
 96 |         print *, ptr%x, ptr%y
 97 |     end select
 98 |     selecttype(ptr)
    |     ^^^^^^^^^^
 99 |       type is(point_3d) ! only trigger for 3d
100 |         print *, ptr%x, ptr%y, ptr%z
    |
help: Replace with 'select type'
95  |       class is (point_2d) ! should trigger for either
96  |         print *, ptr%x, ptr%y
97  |     end select
    -     selecttype(ptr)
98  +     select type(ptr)
99  |       type is(point_3d) ! only trigger for 3d
100 |         print *, ptr%x, ptr%y, ptr%z
101 |     endselect

S231 [*] Missing space in 'endselect'
   --> ./resources/test/fixtures/style/S231.f90:101:5
    |
 99 |       type is(point_3d) ! only trigger for 3d
100 |         print *, ptr%x, ptr%y, ptr%z
101 |     endselect
    |     ^^^^^^^^^
102 |   endsubroutine s2
    |
help: Replace with 'end select'
98  |     selecttype(ptr)
99  |       type is(point_3d) ! only trigger for 3d
100 |         print *, ptr%x, ptr%y, ptr%z
    -     endselect
101 +     end select
102 |   endsubroutine s2
103 |
104 | end module m

S231 [*] Missing space in 'endsubroutine'
   --> ./resources/test/fixtures/style/S231.f90:102:3
    |
100 |         print *, ptr%x, ptr%y, ptr%z
101 |     endselect
102 |   endsubroutine s2
    |   ^^^^^^^^^^^^^
103 |
104 | end module m
    |
help: Replace with 'end subroutine'
99  |       type is(point_3d) ! only trigger for 3d
100 |         print *, ptr%x, ptr%y, ptr%z
101 |     endselect
    -   endsubroutine s2
102 +   end subroutine s2
103 |
104 | end module m
105 |

S231 [*] Missing space in 'endcritical'
   --> ./resources/test/fixtures/style/S231.f90:125:7
    |
123 |       critical
124 |         total = total + this
125 |       endcritical
    |       ^^^^^^^^^^^
126 |       sync all
127 |     endteam
    |
help: Replace with 'end critical'
122 |     change team(team_id)
123 |       critical
124 |         total = total + this
    -       endcritical
125 +       end critical
126 |       sync all
127 |     endteam
128 |   end function coarray_stuff

S231 [*] Missing space in 'endteam'
   --> ./resources/test/fixtures/style/S231.f90:127:5
    |
125 |       endcritical
126 |       sync all
127 |     endteam
    |     ^^^^^^^
128 |   end function coarray_stuff
129 | endmodule m2
    |
help: Replace with 'end team'
124 |         total = total + this
125 |       endcritical
126 |       sync all
    -     endteam
127 +     end team
128 |   end function coarray_stuff
129 | endmodule m2
130 |

S231 [*] Missing space in 'endmodule'
   --> ./resources/test/fixtures/style/S231.f90:129:1
    |
127 |     endteam
128 |   end function coarray_stuff
129 | endmodule m2
    | ^^^^^^^^^
130 |
131 | submodule (m) s1
    |
help: Replace with 'end module'
126 |       sync all
127 |     endteam
128 |   end function coarray_stuff
    - endmodule m2
129 + end module m2
130 |
131 | submodule (m) s1
132 |   implicit none

S231 [*] Missing space in 'endprocedure'
   --> ./resources/test/fixtures/style/S231.f90:135:3
    |
133 | contains
134 |   module procedure procedure_1
135 |   endprocedure procedure_1
    |   ^^^^^^^^^^^^
136 |   integer function submodule_f1(x)
137 |     integer, intent(in) :: x
    |
help: Replace with 'end procedure'
132 |   implicit none
133 | contains
134 |   module procedure procedure_1
    -   endprocedure procedure_1
135 +   end procedure procedure_1
136 |   integer function submodule_f1(x)
137 |     integer, intent(in) :: x
138 |     submodule_f1 = x

S231 [*] Missing space in 'endsubmodule'
   --> ./resources/test/fixtures/style/S231.f90:151:1
    |
149 |     submodule_f2 = x
150 |   end function submodule_f2
151 | endSubmodule s2
    | ^^^^^^^^^^^^
152 |
153 | program p
    |
help: Replace with 'end submodule'
148 |     integer, intent(in) :: x
149 |     submodule_f2 = x
150 |   end function submodule_f2
    - endSubmodule s2
151 + end Submodule s2
152 |
153 | program p
154 |   use :: m, only: s1, s2, point_2d, point_3d

S231 [*] Missing space in 'doubleprecision'
   --> ./resources/test/fixtures/style/S231.f90:159:3
    |
157 |   double precision :: A(n)
158 |   double complex :: b
159 |   DoublePrecision :: c
    |   ^^^^^^^^^^^^^^^
160 |   DoubleComplex :: d
161 |   integer :: i, j, k
    |
help: Replace with 'double precision'
156 |   integer, parameter :: n = 10
157 |   double precision :: A(n)
158 |   double complex :: b
    -   DoublePrecision :: c
159 +   Double Precision :: c
160 |   DoubleComplex :: d
161 |   integer :: i, j, k
162 |   type(point_2d) :: p2d

S231 [*] Missing space in 'doublecomplex'
   --> ./resources/test/fixtures/style/S231.f90:160:3
    |
158 |   double complex :: b
159 |   DoublePrecision :: c
160 |   DoubleComplex :: d
    |   ^^^^^^^^^^^^^
161 |   integer :: i, j, k
162 |   type(point_2d) :: p2d
    |
help: Replace with 'double complex'
157 |   double precision :: A(n)
158 |   double complex :: b
159 |   DoublePrecision :: c
    -   DoubleComplex :: d
160 +   Double Complex :: d
161 |   integer :: i, j, k
162 |   type(point_2d) :: p2d
163 |   type(point_3d) :: p3d

S231 [*] Missing space in 'endinterface'
   --> ./resources/test/fixtures/style/S231.f90:170:3
    |
168 |       integer, intent(in) :: x
169 |     end function f
170 |   endinterface
    |   ^^^^^^^^^^^^
171 |
172 |   do i = 1, n
    |
help: Replace with 'end interface'
167 |     function f(x)
168 |       integer, intent(in) :: x
169 |     end function f
    -   endinterface
170 +   end interface
171 |
172 |   do i = 1, n
173 |     A(i) = real(i)

S231 [*] Missing space in 'enddo'
   --> ./resources/test/fixtures/style/S231.f90:178:3
    |
176 |   do_name: do i = 1, n
177 |     A(i) = A(i) + 1
178 |   enddo do_name
    |   ^^^^^
179 |
180 |   where (A > 5.0)
    |
help: Replace with 'end do'
175 |
176 |   do_name: do i = 1, n
177 |     A(i) = A(i) + 1
    -   enddo do_name
178 +   end do do_name
179 |
180 |   where (A > 5.0)
181 |     A = A * 2.0

S231 [*] Missing space in 'elsewhere'
   --> ./resources/test/fixtures/style/S231.f90:182:3
    |
180 |   where (A > 5.0)
181 |     A = A * 2.0
182 |   eLseWHere
    |   ^^^^^^^^^
183 |     A = A + 10.0
184 |   endwheRe
    |
help: Replace with 'else where'
179 |
180 |   where (A > 5.0)
181 |     A = A * 2.0
    -   eLseWHere
182 +   eLse WHere
183 |     A = A + 10.0
184 |   endwheRe
185 |

S231 [*] Missing space in 'endwhere'
   --> ./resources/test/fixtures/style/S231.f90:184:3
    |
182 |   eLseWHere
183 |     A = A + 10.0
184 |   endwheRe
    |   ^^^^^^^^
185 |
186 |   where (A > 15.0)
    |
help: Replace with 'end where'
181 |     A = A * 2.0
182 |   eLseWHere
183 |     A = A + 10.0
    -   endwheRe
184 +   end wheRe
185 |
186 |   where (A > 15.0)
187 |     A = A + 3.0

S231 [*] Missing space in 'elseif'
   --> ./resources/test/fixtures/style/S231.f90:194:3
    |
192 |   if (A(1) == 11.0) then
193 |     print *, "foo"
194 |   eLsEIf (A(1) == 12.0) then
    |   ^^^^^^
195 |     print *, "bar"
196 |   else if (A(2) == 12.0) then
    |
help: Replace with 'else if'
191 |
192 |   if (A(1) == 11.0) then
193 |     print *, "foo"
    -   eLsEIf (A(1) == 12.0) then
194 +   eLsE If (A(1) == 12.0) then
195 |     print *, "bar"
196 |   else if (A(2) == 12.0) then
197 |     print *, "baz"

S231 [*] Missing space in 'endif'
   --> ./resources/test/fixtures/style/S231.f90:204:3
    |
202 |   if (A(1) == 11.0) then
203 |     print *, "foo"
204 |   EndIf
    |   ^^^^^
205 |
206 |   call s1()
    |
help: Replace with 'end if'
201 |
202 |   if (A(1) == 11.0) then
203 |     print *, "foo"
    -   EndIf
204 +   End If
205 |
206 |   call s1()
207 |

S231 [*] Missing space in 'goto'
   --> ./resources/test/fixtures/style/S231.f90:218:15
    |
216 |   10 continue
217 |   i = i + 1
218 |   if (i < 10) goTo 10
    |               ^^^^
219 |   if (i < 20) gO To 10
220 |   if (i < 30) go  & ! helpful comment!
    |
help: Replace with 'go to'
215 |   i = 1
216 |   10 continue
217 |   i = i + 1
    -   if (i < 10) goTo 10
218 +   if (i < 10) go To 10
219 |   if (i < 20) gO To 10
220 |   if (i < 30) go  & ! helpful comment!
221 |     to 10

S231 [*] Missing space in 'endprogram'
   --> ./resources/test/fixtures/style/S231.f90:229:1
    |
227 |     fff = x
228 |   end function fff
229 | endprogram p
    | ^^^^^^^^^^
help: Replace with 'end program'
226 |       out) :: x
227 |     fff = x
228 |   end function fff
    - endprogram p
229 + end program p
