crates/fortitude_linter/src/rules/style/snapshots/fortitude_linter__rules__style__tests__line-too-long_S001_line_length_20.f90.snap
---
source: crates/fortitude_linter/src/rules/style/mod.rs
expression: diagnostics
snapshot_kind: text
---
S001 line length of 26, exceeds maximum 20
 --> ./resources/test/fixtures/style/S001_line_length_20.f90:2:21
  |
1 | ! SPDX-License-Identifier: too-long-but-dont-flag
2 | ! This comment is too long
  |                     ^^^^^^
3 | ! https://dont-flag-urls
4 | program test
  |

S001 line length of 68, exceeds maximum 20
 --> ./resources/test/fixtures/style/S001_line_length_20.f90:5:21
  |
3 | ! https://dont-flag-urls
4 | program test
5 |   use some_really_long_module_name, only : integer_working_precision
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
6 |   use &
7 |     some_other_really_long_module_but_only_word_on_line_so_dont_flag
  |

S001 line length of 72, exceeds maximum 20
  --> ./resources/test/fixtures/style/S001_line_length_20.f90:9:21
   |
 7 |     some_other_really_long_module_but_only_word_on_line_so_dont_flag
 8 |   implicit none
 9 |   integer(integer_working_precision), parameter, dimension(1) :: a = [1]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
10 |   integer  exactly20
11 | end program test
   |
