crates/fortitude_linter/src/rules/style/snapshots/fortitude_linter__rules__style__tests__maths-missing-parentheses_S251.f90.snap
---
source: crates/fortitude_linter/src/rules/style/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/style/S251.f90:3:16: S251 [*] '*' has higher precedence than '+'; add parentheses for clarity
  |
1 | program test
2 |   implicit none (type, external)
3 |   print*, 1. + 2. * 3. - 4. / 5.;
  |                ^^^^^^^ S251
4 |   print*, 1.*(cos(2.) - 3. + (4.*5.-6.*sin(7.))*sin(8.))
5 |   print*, 1. * 2. / 3. * 4.;
  |
  = help: Add parentheses

ℹ Safe fix
1 1 | program test
2 2 |   implicit none (type, external)
3   |-  print*, 1. + 2. * 3. - 4. / 5.;
  3 |+  print*, 1. + (2. * 3.) - 4. / 5.;
4 4 |   print*, 1.*(cos(2.) - 3. + (4.*5.-6.*sin(7.))*sin(8.))
5 5 |   print*, 1. * 2. / 3. * 4.;
6 6 |   print*, -1.**2

./resources/test/fixtures/style/S251.f90:3:26: S251 [*] '/' has higher precedence than '-'; add parentheses for clarity
  |
1 | program test
2 |   implicit none (type, external)
3 |   print*, 1. + 2. * 3. - 4. / 5.;
  |                          ^^^^^^^ S251
4 |   print*, 1.*(cos(2.) - 3. + (4.*5.-6.*sin(7.))*sin(8.))
5 |   print*, 1. * 2. / 3. * 4.;
  |
  = help: Add parentheses

ℹ Safe fix
1 1 | program test
2 2 |   implicit none (type, external)
3   |-  print*, 1. + 2. * 3. - 4. / 5.;
  3 |+  print*, 1. + 2. * 3. - (4. / 5.);
4 4 |   print*, 1.*(cos(2.) - 3. + (4.*5.-6.*sin(7.))*sin(8.))
5 5 |   print*, 1. * 2. / 3. * 4.;
6 6 |   print*, -1.**2

./resources/test/fixtures/style/S251.f90:4:30: S251 [*] '*' has higher precedence than '+'; add parentheses for clarity
  |
2 |   implicit none (type, external)
3 |   print*, 1. + 2. * 3. - 4. / 5.;
4 |   print*, 1.*(cos(2.) - 3. + (4.*5.-6.*sin(7.))*sin(8.))
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^ S251
5 |   print*, 1. * 2. / 3. * 4.;
6 |   print*, -1.**2
  |
  = help: Add parentheses

ℹ Safe fix
1 1 | program test
2 2 |   implicit none (type, external)
3 3 |   print*, 1. + 2. * 3. - 4. / 5.;
4   |-  print*, 1.*(cos(2.) - 3. + (4.*5.-6.*sin(7.))*sin(8.))
  4 |+  print*, 1.*(cos(2.) - 3. + ((4.*5.-6.*sin(7.))*sin(8.)))
5 5 |   print*, 1. * 2. / 3. * 4.;
6 6 |   print*, -1.**2
7 7 | 

./resources/test/fixtures/style/S251.f90:4:31: S251 [*] '*' has higher precedence than '-'; add parentheses for clarity
  |
2 |   implicit none (type, external)
3 |   print*, 1. + 2. * 3. - 4. / 5.;
4 |   print*, 1.*(cos(2.) - 3. + (4.*5.-6.*sin(7.))*sin(8.))
  |                               ^^^^^ S251
5 |   print*, 1. * 2. / 3. * 4.;
6 |   print*, -1.**2
  |
  = help: Add parentheses

ℹ Safe fix
1 1 | program test
2 2 |   implicit none (type, external)
3 3 |   print*, 1. + 2. * 3. - 4. / 5.;
4   |-  print*, 1.*(cos(2.) - 3. + (4.*5.-6.*sin(7.))*sin(8.))
  4 |+  print*, 1.*(cos(2.) - 3. + ((4.*5.)-6.*sin(7.))*sin(8.))
5 5 |   print*, 1. * 2. / 3. * 4.;
6 6 |   print*, -1.**2
7 7 | 

./resources/test/fixtures/style/S251.f90:4:37: S251 [*] '*' has higher precedence than '-'; add parentheses for clarity
  |
2 |   implicit none (type, external)
3 |   print*, 1. + 2. * 3. - 4. / 5.;
4 |   print*, 1.*(cos(2.) - 3. + (4.*5.-6.*sin(7.))*sin(8.))
  |                                     ^^^^^^^^^^ S251
5 |   print*, 1. * 2. / 3. * 4.;
6 |   print*, -1.**2
  |
  = help: Add parentheses

ℹ Safe fix
1 1 | program test
2 2 |   implicit none (type, external)
3 3 |   print*, 1. + 2. * 3. - 4. / 5.;
4   |-  print*, 1.*(cos(2.) - 3. + (4.*5.-6.*sin(7.))*sin(8.))
  4 |+  print*, 1.*(cos(2.) - 3. + (4.*5.-(6.*sin(7.)))*sin(8.))
5 5 |   print*, 1. * 2. / 3. * 4.;
6 6 |   print*, -1.**2
7 7 | 

./resources/test/fixtures/style/S251.f90:6:12: S251 [*] '**' has higher precedence than '-'; add parentheses for clarity
  |
4 |   print*, 1.*(cos(2.) - 3. + (4.*5.-6.*sin(7.))*sin(8.))
5 |   print*, 1. * 2. / 3. * 4.;
6 |   print*, -1.**2
  |            ^^^^^ S251
7 |
8 |   ! These are all fine
  |
  = help: Add parentheses

ℹ Safe fix
3 3 |   print*, 1. + 2. * 3. - 4. / 5.;
4 4 |   print*, 1.*(cos(2.) - 3. + (4.*5.-6.*sin(7.))*sin(8.))
5 5 |   print*, 1. * 2. / 3. * 4.;
6   |-  print*, -1.**2
  6 |+  print*, -(1.**2)
7 7 | 
8 8 |   ! These are all fine
9 9 |   print*, 1. + (2. * 3.) - (4. / 5.);
