crates/fortitude_linter/src/rules/style/snapshots/fortitude_linter__rules__style__tests__missing-double-colon_S071.f90.snap
---
source: crates/fortitude_linter/src/rules/style/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/style/S071.f90:3:3: S071 [*] variable declaration missing '::'
  |
1 | program test
2 |   implicit none
3 |   real these, are
  |   ^^^^^^^^^^^^^^^ S071
4 |   type(real(kind=kind(1.0d0))) all(42), bad
5 |   integer :: but, these_ones, are_fine
  |
  = help: Add '::'

1 | program test
2 |   implicit none
  -   real these, are
3 +   real :: these, are
4 |   type(real(kind=kind(1.0d0))) all(42), bad
5 |   integer :: but, these_ones, are_fine
6 | end program test

./resources/test/fixtures/style/S071.f90:4:3: S071 [*] variable declaration missing '::'
  |
2 |   implicit none
3 |   real these, are
4 |   type(real(kind=kind(1.0d0))) all(42), bad
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ S071
5 |   integer :: but, these_ones, are_fine
6 | end program test
  |
  = help: Add '::'

1 | program test
2 |   implicit none
3 |   real these, are
  -   type(real(kind=kind(1.0d0))) all(42), bad
4 +   type(real(kind=kind(1.0d0))) :: all(42), bad
5 |   integer :: but, these_ones, are_fine
6 | end program test
