crates/fortitude_linter/src/rules/style/snapshots/fortitude_linter__rules__style__tests__missing-newline-at-end-of-file_S002.f90.snap
---
source: crates/fortitude_linter/src/rules/style/mod.rs
expression: diagnostics
snapshot_kind: text
---
S002 [*] missing newline at end of file
 --> ./resources/test/fixtures/style/S002.f90:2:75
  |
1 | program p
2 | end program p ! Missing newline, be careful with tools that might add one!
  |                                                                           ^
help: Add newline at end of file
1 | program p
  - end program p ! Missing newline, be careful with tools that might add one!
2 + end program p ! Missing newline, be careful with tools that might add one!
