crates/fortitude_linter/src/rules/style/snapshots/fortitude_linter__rules__style__tests__multiple-modules_S211.f90.snap
---
source: crates/fortitude_linter/src/rules/style/mod.rs
expression: diagnostics
snapshot_kind: text
---
S211 Multiple modules in one file, split into one module per file
  --> ./resources/test/fixtures/style/S211.f90:9:1
   |
 9 | module mod2
   | ^^^^^^^^^^^
10 |     use :: mod1, only: test1
   |
